Fix T88100: Crash going to shading tab